# tjlang

./: .gitattributes  .gitignore  CMakeLists.txt  Cargo.toml  Grammar.g4  Makefile
docs/: collections.md  io.md  looping.md  primitive_methods.md
docs/demos/: conditionals.tj  for_loops.tj  io.tj  while_loops.tj
errors/: expected_outputs.md
errors/static/: test_comprehensive_span_tracking.tj  test_edge_cases.tj  test_float_div_by_zero.tj  test_function_span_tracking.tj  test_literal_div_by_zero.tj  test_literal_index_bounds.tj  test_literal_modulo_by_zero.tj  test_span_precision.tj  test_undefined_function.tj  test_undefined_module_method.tj  test_undefined_var_in_function.tj  test_undefined_variable.tj  test_wrong_argument_count.tj
examples/: Cargo.toml  demo.tj  diagnostics_demo.rs  lexer_demo.rs  parser_demo.rs  rich_demo.rs  simple_lexer_demo.rs
grammar/: Language.g4
scripts/: gen.ps1
src/: main.cpp  main.rs
src/analyzer/: analyzer.cpp  analyzer.hpp
src/analyzer/rules/: rules_complexity.cpp  rules_complexity.hpp  rules_constant_conditions.cpp  rules_constant_conditions.hpp  rules_dead_code.cpp  rules_dead_code.hpp  rules_duplicate_names.cpp  rules_duplicate_names.hpp  rules_empty_functions.cpp  rules_empty_functions.hpp  rules_function_length.cpp  rules_function_length.hpp  rules_long_params.cpp  rules_long_params.hpp  rules_magic_numbers.cpp  rules_magic_numbers.hpp  rules_naming_conventions.cpp  rules_naming_conventions.hpp  rules_type_safety.cpp  rules_type_safety.hpp  rules_unreachable_code.cpp  rules_unreachable_code.hpp  rules_unused_params.cpp  rules_unused_params.hpp  rules_unused_variables.cpp  rules_unused_variables.hpp
src/ast/: builder.cpp  builder.hpp  nodes.hpp  serializer.hpp
src/builder/: builder.cpp  builder.hpp
src/driver/: driver.cpp  driver.hpp
src/parser/: errorCategories.cpp  errorCategories.hpp  errorFormatter.cpp  errorFormatter.hpp  errorListener.hpp  suggestionEngine.cpp  suggestionEngine.hpp  unifiedErrorListener.cpp  unifiedErrorListener.hpp
src/serializer/: serializer.cpp  serializer.hpp
test_files/: collection_types_test.tj  debug_module_parsing.tj  debug_span.tj  error_test.tj  literal_div_zero.tj  member_access_test.tj  module_test.tj  module_warning_test.tj  simple_collections.tj  simple_module_test.tj  simple_test.tj  span_tracking_test.tj  stdlib_modules_test.tj  type_checker_test.tj  type_error_test.tj  type_inference_test.tj  valid_module_test.tj
tests/: Cargo.toml  lex_error_unclosed_comment.tj  lex_error_unclosed_string.tj  run_analyzer_tests.ps1  run_tests.ps1  syntax_error_extra_semicolon.tj  syntax_error_invalid_type.tj  syntax_error_missing_brace.tj  syntax_error_missing_colon.tj  syntax_error_missing_comma.tj  syntax_error_missing_def.tj  syntax_error_missing_paren.tj  syntax_error_missing_return.tj  test.tj  test_runner.rs  valid_expressions.tj  valid_simple.tj
tests/analyzer/invalid/: 0000_unused_parameters.tj  0001_duplicate_functions.tj  0002_duplicate_parameters.tj  0003_mixed_issues.tj  0004_all_unused_params.tj  0005_multiple_duplicate_functions.tj  0006_complex_duplicate_params.tj  0007_dead_code.tj  0008_constant_conditions.tj  0009_complexity_issues.tj  0010_type_safety.tj  0011_mixed_issues.tj  0012_code_quality_issues.tj
tests/analyzer/valid/: 0000_clean_functions.tj  0001_single_function.tj  0003_simple_calculation.tj  0004_clean_complex.tj  0005_well_structured.tj  0006_clean_code_quality.tj
tests/invalid/lexer_errors/: invalid_characters.tj
tests/invalid/syntax_errors/: malformed_expressions.tj  missing_semicolons.tj
tests/invalid/type_errors/: type_mismatches.tj
tests/lexer/errors/: 0000_invalid_char.tj  0001_invalid_escape.tj  0002_invalid_number.tj
tests/syntax/errors/: 0002_malformed_generic.tj  0003_missing_arrow.tj
tests/type_system/: 0000_basic.tj  0001_comprehensive.tj  0002_simple.tj
tests/valid/control_flow/: if_statements.tj  loops.tj  pattern_matching.tj
tests/valid/expressions/: arithmetic.tj  logical_operations.tj  string_operations.tj
tests/valid/functions/: 0000_simple.tj  0002_complex.tj  basic_functions.tj  generic_functions.tj  trait_bounds.tj
tests/valid/literals/: 0000_literals.tj
tests/valid/types/: enum_types.tj  primitive_types.tj  struct_types.tj
tjlang-analyzer/: Cargo.toml
tjlang-analyzer/src/: config.rs  context.rs  lib.rs  pipeline.rs  rules.rs  tests.rs  type_checker.rs  type_checker_tests.rs
tjlang-ast/: Cargo.toml
tjlang-ast/src/: expressions.rs  lib.rs  statements.rs
tjlang-cli/: Cargo.toml  test_call.tj
tjlang-cli/src/: main.rs
tjlang-codegen/: Cargo.toml
tjlang-codegen/src/: lib.rs
tjlang-diagnostics/: Cargo.toml
tjlang-diagnostics/src/: collection.rs  diagnostic.rs  error_codes.rs  helpers.rs  lib.rs  source_span.rs  tests.rs  utils.rs
tjlang-lexer/: Cargo.toml
tjlang-lexer/src/: lib.rs
tjlang-parser/: Cargo.toml  grammar.pest
tjlang-parser/src/: declarations.rs  expressions.rs  grammar.pest  lib.rs  parser.rs  pest_parser.rs  statements.rs  tests.rs  types.rs
tjlang-runtime/: Cargo.toml  README.md
tjlang-runtime/src/: bytecode.rs  concurrency.rs  gc.rs  interpreter.rs  lib.rs  module_system.rs  pattern_matching.rs  primitive_methods.rs  stdlib_integration.rs  tests.rs  type_system.rs  values.rs  vm.rs
tjlang-runtime/src/stdlib/: collections.rs  error.rs  file.rs  io.rs  math.rs  mod.rs  string.rs  testing.rs  tests.rs  time.rs
tjlang-runtime/src/stdlib/tests/: advanced_collections_tests.rs  collections_tests.rs  error_tests.rs  file_tests.rs  file_tests2.rs  io_tests.rs  io_tests2.rs  math_tests.rs  primitive_methods_tests.rs  string_tests.rs  testing_tests.rs  time_tests.rs
tjlang-stdlib/: Cargo.toml
tjlang-stdlib/src/: lib.rs
tjlang-tir/: Cargo.toml
tjlang-tir/src/: lib.rs
tjlang-types/: Cargo.toml
tjlang-types/src/: algebraic_types.rs  checker.rs  constraint_solver.rs  interfaces.rs  lib.rs  tests.rs  type_checker.rs  type_environment.rs  types.rs
