[workspace]
members = [
    "tjlang-lexer",
    "tjlang-parser", 
    "tjlang-ast",
    "tjlang-analyzer",
    # "tjlang-tir",
    # "tjlang-codegen",
    "tjlang-runtime",
    "tjlang-diagnostics",
    "tjlang-stdlib",
    "tjlang-cli",
]
resolver = "2"
default-members = ["tjlang-cli"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["TJ"]
license = "MIT"

[workspace.dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }
codespan = "0.12.0"
codespan-reporting = "0.12.0"
logos = "0.15.1"
miette = "7.6.0"
serde = "1.0.226"
serde_json = "1.0.145"
thiserror = "2.0.16"
