[package]
name = "tjlang-examples"
version = "0.1.0"
edition = "2021"

[[example]]
name = "simple_lexer_demo"
path = "simple_lexer_demo.rs"

[[example]]
name = "parser_demo"
path = "parser_demo.rs"

[[example]]
name = "diagnostics_demo"
path = "diagnostics_demo.rs"

[dependencies]
codespan = "0.12.0"
codespan-reporting = "0.12.0"
tjlang-lexer = { version = "0.1.0", path = "../tjlang-lexer" }
tjlang-parser = { version = "0.1.0", path = "../tjlang-parser" }
tjlang-ast = { version = "0.1.0", path = "../tjlang-ast" }
tjlang-diagnostics = { version = "0.1.0", path = "../tjlang-diagnostics" }
