[package]
name = "tjlang-analyzer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
indexmap = "2.11.4"
thiserror = "2.0.16"
tjlang-ast = { version = "0.1.0", path = "../tjlang-ast" }
tjlang-diagnostics = { version = "0.1.0", path = "../tjlang-diagnostics" }
tjlang-tir = { version = "0.1.0", path = "../tjlang-tir" }
