[package]
name = "tjlang-analyzer"
version = "0.1.0"
edition = "2021"

[dependencies]
tjlang-ast = { path = "../tjlang-ast" }
tjlang-lexer = { path = "../tjlang-lexer" }
tjlang-parser = { path = "../tjlang-parser" }
tjlang-diagnostics = { path = "../tjlang-diagnostics" }
codespan = "0.12.0"
codespan-reporting = "0.12.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.100"
indexmap = "2.11.4"
thiserror = "2.0.16"
tjlang-tir = { version = "0.1.0", path = "../tjlang-tir" }
