[package]
name = "tjlang-analyzer"
version = "0.1.0"
edition = "2021"

[dependencies]
codespan = "0.12.0"
codespan-reporting = "0.12.0"
indexmap = "2.11.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.16"
tjlang-ast = { path = "../tjlang-ast" }
tjlang-diagnostics = { path = "../tjlang-diagnostics" }
tjlang-lexer = { path = "../tjlang-lexer" }
tjlang-parser = { path = "../tjlang-parser" }
tjlang-stdlib = { path = "../tjlang-stdlib" }
tjlang-tir = { version = "0.1.0", path = "../tjlang-tir" }
