[package]
name = "tjlang-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tjlang"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
clap = "4.5.48"
miette = "7.6.0"
tjlang-analyzer = { version = "0.1.0", path = "../tjlang-analyzer" }
tjlang-codegen = { version = "0.1.0", path = "../tjlang-codegen" }
tjlang-diagnostics = { version = "0.1.0", path = "../tjlang-diagnostics" }
tjlang-lexer = { version = "0.1.0", path = "../tjlang-lexer" }
tjlang-parser = { version = "0.1.0", path = "../tjlang-parser" }
