[package]
name = "tjlang-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tjlang"
path = "src/main.rs"

[features]
debug = ["tjlang-runtime/debug", "tjlang-parser/debug"]

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }
miette = "7.6.0"
serde_json = "1.0.145"
codespan = "0.12.0"
codespan-reporting = "0.12.0"
tjlang-lexer = { version = "0.1.0", path = "../tjlang-lexer" }
tjlang-parser = { version = "0.1.0", path = "../tjlang-parser" }
tjlang-runtime = { version = "0.1.0", path = "../tjlang-runtime" }
tjlang-diagnostics = { version = "0.1.0", path = "../tjlang-diagnostics" }
