[package]
name = "tjlang-codegen"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
inkwell = { version = "0.6.0", features = ["llvm18-1"] }
thiserror = "2.0.16"
tjlang-diagnostics = { version = "0.1.0", path = "../tjlang-diagnostics" }
tjlang-tir = { version = "0.1.0", path = "../tjlang-tir" }
