[package]
name = "tjlang-parser"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
codespan = "0.12.0"
codespan-reporting = "0.12.0"
thiserror = "2.0.16"
tjlang-ast = { version = "0.1.0", path = "../tjlang-ast" }
tjlang-diagnostics = { version = "0.1.0", path = "../tjlang-diagnostics" }
tjlang-lexer = { version = "0.1.0", path = "../tjlang-lexer" }
pest = "2.7"
pest_derive = "2.7"

[features]
debug = []
