[package]
name = "tjlang-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
thiserror = "2.0.16"
tjlang-ast = { version = "0.1.0", path = "../tjlang-ast" }
codespan = "0.12.0"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.21.0"
url = "2.4.0"
md5 = "0.7.0"
sha1 = "0.10.0"
sha2 = "0.10.0"
rand = "0.8.0"
atty = "0.2.14"
dirs = "5.0.0"
