[package]
name = "tjlang-types"
version = "0.1.0"
edition = "2021"

[dependencies]
tjlang-ast = { path = "../tjlang-ast" }
tjlang-diagnostics = { path = "../tjlang-diagnostics" }
codespan = "0.11"
codespan-reporting = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
